[Android] Fix welcome page on small screens.
This makes the Chrome logo and general page design resizeable so about:welcome
can shrink to fit small screens. This also fixes a centering issue where the
Chrome logo was much too low on the screen.

BUG=165881


Review URL: https://chromiumcodereview.appspot.com/12328032

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@186635 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 663fe04ad401c63e5ae2b93b625b54be666b8002

--- a/chrome/browser/resources/about_welcome_android/about_welcome_android.css
+++ b/chrome/browser/resources/about_welcome_android/about_welcome_android.css
@@ -8,11 +8,16 @@ html {
 }
 
 body {
+  -webkit-align-items: center;
+  -webkit-flex-direction: column;
   background-color: #f4f4f4;
-  background-repeat: no-repeat;
+  box-sizing: border-box;
+  display: -webkit-flex;
   font-family: Droid Sans;
   height: 100%;
-  margin: 0;
+  margin: 0 auto;
+  max-width: 600px;
+  padding: 20px;
   width: 100%;
 }
 
@@ -20,34 +25,21 @@ a {
   color: rgb(51, 181, 229);
 }
 
+.spacing {
+  -webkit-flex: 1;
+}
+
 #logo {
+  -webkit-flex-shrink: 1;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 100%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#center-wrapper {
-  height: 100%;
+  background-size: contain;
+  min-height: 60px;
   width: 100%;
-}
-
-#footer-container {
-  display: none;
-  height: 20%;
-  overflow-y: scroll;
-  position: fixed;
-  text-align: center;
-  width: 100%;
-}
-
-#footer {
-  color: #646464;
-  font-size: 1.3em;
 }
 
 #take-a-tour {
+  -webkit-flex: none;
   background: -webkit-gradient(
       linear, left top, left bottom, from(#f5f5f5), to(#f1f1f1));
   border: 1px solid #ccc;
@@ -58,20 +50,12 @@ a {
   display: block;
   font-size: 20px;
   font-weight: bold;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 20px auto 0;
   max-width: 400px;
   padding: 11px 0;
   text-align: center;
   text-decoration: none;
-}
-@media only screen and (max-width: 400px) {
-  #take-a-tour {
-    /* By default the button is 400px wide and center.  In this selector, the
-       screen isn't wide enough for that. */
-    margin-left: 20px;
-    margin-right: 20px;
-  }
+  width: 100%;
 }
 
 #take-a-tour:active {
@@ -79,82 +63,53 @@ a {
   box-shadow: inset 0 5px 15px rgba(100, 100, 100, 0.20);
 }
 
+#footer {
+  -webkit-flex: none;
+  color: #646464;
+  display: none;
+  font-size: 1.3em;
+  margin-top: 20px;
+  text-align: center;
+}
+
 /* Logos */
 @media only screen and (-webkit-min-device-pixel-ratio: 1.0) {
   #logo {
+    -webkit-flex-basis: 152px;
     background-image: url(images/holo_logo_200.png);
-    height: 152px;
-    width: 536px;
+    max-width: 536px;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.3) {
   #logo {
+    -webkit-flex-basis: 114px;
     background-image: url(images/holo_logo_200.png);
-    height: 114px;
-    width: 402px;
+    max-width: 402px;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5) {
   #logo {
+    -webkit-flex-basis: 76px;
     background-image: url(images/holo_logo_150.png);
-    height: 76px;
-    width: 268px;
+    max-width: 268px;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2.0) {
   #logo {
+    -webkit-flex-basis: 76px;
     background-image: url(images/holo_logo_200.png);
-    height: 76px;
-    width: 268px;
+    max-width: 268px;
   }
 }
 
-/* Logo/tour button spacing */
-@media only screen and (min-height: 401px) {
-  #take-a-tour {
-    /* Add space between the logo and the tour button */
-    margin-top: 60px;
-  }
-}
-@media only screen and (max-height: 400px) {
-  #take-a-tour {
-    /* Add a little space between the logo and tour button, and push the
-       logo and button up some. */
-    margin-bottom: 40px;
-    margin-top: 20px;
-  }
-}
-
-/* Footer vertical positioning */
+/* Increase spacing on larger screens. */
 @media only screen and (min-height: 601px) {
-  #footer-container {
-    /* the top of the footer is 140px from the bottom of the screen */
-    bottom: 0;
-    height: 140px;
+  body {
+    padding: 100px 20px;
   }
-}
-@media only screen and (max-height: 600px) {
-  #footer-container {
-    /* the bottom of footer is 20px from the bottom of the screen */
-    bottom: 20px;
-  }
-}
 
-/* Footer horizontal width */
-#footer {
-  max-width: 600px;
-}
-@media only screen and (min-width: 606px) {
+  #take-a-tour,
   #footer {
-    /* the footer doesn't fill the page horizontally, so center it */
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-@media only screen and (max-width: 605px) {
-  #footer {
-    /* the footer horizontally fills the page, so add some margin */
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-top: 60px;
   }
 }
